<resources>
    <string name="app_name">PediFeed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed_now">Feed Now</string>
    <string name="feed_quantity">Feed quantity</string>
    <string name="daily_feed_quantity">Daily Average Quantity</string>
    <string name="daily_feed_quantity_sample">9.4 servings</string>
    <string name="record_status_sample">PENDING</string>
    <string name="record_quantity_sample">2 servings</string>
    <string name="record_timestamp_sample">8:32PM 21/12/2016</string>
    <string name="arduino_status">Arduino status</string>
    <string name="arduino_status_sample">CONNECTED</string>
    <string name="schedule_title_sample">Lunch</string>
    <string name="repeat_mode_sample">DAILY</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="vibration_intensity_title">Vibration intensity</string>
    <string name="vibration_intensity_summary">The intensity of vibration during feeding for smooth flow of food</string>
    <string name="max_pending_schedules">Maximum number of pending schedules</string>
    <string name="feeding_time">Feeding time</string>
    <string name="title">Title</string>
    <string name="title_hint">Schedule name</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="day_of_week">Day of Week</string>
    <string name="repeat_mode">Repeat Mode</string>
    <string name="weekly">WEEKLY</string>
    <string name="daily">DAILY</string>
    <string name="schedule_created">Schedule created</string>
    <string name="error_schedule_name_empty">The schedule name cannot be empty</string>

    <!-- Blue Term -->
    <string name="alert_dialog_no_bt">Cannot connect to your bluetooth enabled feeder without bluetooth.</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">NO</string>
    <string name="alert_dialog_warning_title">Warning</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_turn_on_bt">This application needs the Bluetooth. Do you want turn on?</string>

    <string name="toast_connected_to">Connected to</string>
    <string name="toast_unable_to_connect">Unable to connect device</string>
    <string name="toast_connection_lost">Device connection was lost</string>

    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices…</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <!-- Don't localize these default values -->
    <string name="default_value_localecho_preference">false</string>
    <string name="default_value_allowinsecureconnections_preference">true</string>
    <string name="default_value_fontsize_preference">10</string>
    <string name="default_value_color_preference">2</string>
    <string name="default_value_controlkey_preference">0</string>
    <string name="default_value_end_of_line_0D_preference">13</string>
    <string name="default_value_end_of_line_0A_preference">10</string>
    <string name="default_screenorientation_preference">0</string>
    <string name="connected">CONNECTED</string>
    <string name="na">N/A</string>
    <string name="log">Log</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="max_servings">Maximum servings</string>
    <string name="feed_quantity_sample">2 servings</string>
    <string name="sync">Sync</string>
    <string name="syncing">Syncing</string>
    <string name="max_records">Maximum records to sync</string>
    <string name="sync_latency">Sync latency</string>

</resources>
