<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/right_layout"
            android:layout_toStartOf="@+id/right_layout"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timestamp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/record_timestamp_sample" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule_title_sample"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_quantity_sample"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>

            <TextView
                android:id="@+id/repeatMode"
                android:layout_width="96sp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/repeat_mode_sample"
                android:textColor="@android:color/primary_text_dark"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
